Add Oldtimer and Prototypen links to navigation

--- a/philosophie.html
+++ b/philosophie.html
@@ -25,6 +25,8 @@
             </a>
             <nav class="nav">
                 <a href="leistungen.html" class="nav__link">LEISTUNGEN</a>
+                <a href="oldtimer-teile.html" class="nav__link">OLDTIMER TEILE</a>
+                <a href="prototypen-teile.html" class="nav__link">PROTOTYPEN TEILE</a>
                 <a href="philosophie.html" class="nav__link" style="color: var(--color-copper);">PHILOSOPHIE</a>
                 <a href="faq.html" class="nav__link">FAQ</a>
                 <a href="kontakt.html" class="nav__link">KONTAKT</a>
