Update subpages with brand DNA and premium content

--- a/oldtimer-teile.html
+++ b/oldtimer-teile.html
@@ -36,24 +36,64 @@
     <main style="padding-top: 120px; min-height: 80vh;">
         <section class="grid-bg" style="padding: var(--space-xxl) 0;">
             <div class="container">
-                <h1 class="hero__slogan" style="font-size: 3rem; margin-bottom: var(--space-l);">OLDTIMER
-                    TEILE<br>RESTAURATION</h1>
+                <h1 class="hero__slogan" style="font-size: 3rem; margin-bottom: var(--space-l);">COACHBUILDING<br>FÜR
+                    IKONEN</h1>
                 <p class="hero__sub" style="max-width: 800px; margin-bottom: var(--space-xl);">
-                    Werterhalt durch originalgetreue Rekonstruktion von Teilen, die es nicht mehr gibt.
+                    <span style="color: var(--color-copper); font-weight: 600;">PRÄZISION, DIE GESCHICHTE
+                        BEWAHRT.</span><br>
+                    Wir operieren in der Liga von Bugatti und Ferrari Heritage. Keine Werkstatt – eine Manufaktur für
+                    das Unmögliche. Wir fertigen, was nicht mehr existiert.
                 </p>
 
-                <div
-                    style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.5);">
-                    <h3
-                        style="color: var(--color-copper); font-family: var(--font-heading); margin-bottom: var(--space-m);">
-                        DIESE SEITE BEFINDET SICH IM AUFBAU</h3>
-                    <p style="color: var(--color-white);">
-                        Hier entstehen in Kürze detaillierte Informationen zu unseren Restaurations-Dienstleistungen.
-                        <br><br>
-                        Haben Sie Fragen? <a href="kontakt.html"
-                            style="color: var(--color-copper); text-decoration: underline;">Kontaktieren Sie uns
-                            direkt.</a>
-                    </p>
+                <div class="grid"
+                    style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: var(--space-l); margin-bottom: var(--space-xl);">
+                    <!-- Card 1 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            THE TRUE-METAL-METHOD
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            Wir ersetzen "Dengeln nach Augenmaß" durch einen reproduzierbaren High-Tech-Prozess.
+                            3D-Forensik. Reverse Engineering. Kaltverfestigung. Wir raten nicht, wir messen.
+                        </p>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            INVISIBLE RESILIENCE
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            100% originale Optik, aber überlegene Formstabilität. Unser Blech verzeiht elastisch (Metal
+                            Memory) – Spachtel würde brechen. <span style="color: var(--color-copper);">Spachtel ist
+                                Verrat am Blech.</span>
+                        </p>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            AUTHENTIZITÄT
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            Wir fertigen besser, als es je war. Authentizität beginnt im Material, nicht in der
+                            Oberfläche. Wir retten nicht nur das Auto, wir retten seine Seele.
+                        </p>
+                    </div>
+                </div>
+
+                <div style="text-align: center; margin-top: var(--space-xxl);">
+                    <h2
+                        style="font-family: var(--font-heading); color: var(--color-white); margin-bottom: var(--space-m);">
+                        BLECHKUNST FÜR LEGENDEN.
+                    </h2>
+                    <a href="kontakt.html" class="cta-button cta-button--copper">ANFRAGE STARTEN</a>
                 </div>
             </div>
         </section>
@@ -77,8 +117,8 @@
                     <p>+49 172 8807046<br>kontakt@skarosserie.de</p>
                 </div>
                 <div class="contact-block">
-                    <h4>LEGAL</h4>
-                    <p><a href="#">Impressum</a><br><a href="#">Datenschutz</a></p>
+                    <h4>RECHTLICHES</h4>
+                    <p><a href="impressum.html">Impressum</a><br><a href="datenschutz.html">Datenschutz</a></p>
                 </div>
             </div>
         </div>
