--- a/prototypen-teile.html
+++ b/prototypen-teile.html
@@ -36,24 +36,63 @@
     <main style="padding-top: 120px; min-height: 80vh;">
         <section class="grid-bg" style="padding: var(--space-xxl) 0;">
             <div class="container">
-                <h1 class="hero__slogan" style="font-size: 3rem; margin-bottom: var(--space-l);">PROTOTYPEN TEILE<br>BAU
-                </h1>
+                <h1 class="hero__slogan" style="font-size: 3rem; margin-bottom: var(--space-l);">REALITÄT<br>VOR DER
+                    SERIE</h1>
                 <p class="hero__sub" style="max-width: 800px; margin-bottom: var(--space-xl);">
-                    Seriennahe Validierung. Beschleunigte Testphasen. Fehlervermeidung vor der Serie.
+                    <span style="color: var(--color-copper); font-weight: 600;">GESCHWINDIGKEIT DURCH
+                        PRÄZISION.</span><br>
+                    Wenn es das Teil noch nicht gibt, erschaffen wir es. Schnell. Präzise. In Serienqualität. Wir
+                    liefern seriennahe Bauteile für Ihre Validierung – schneller als der Markt.
                 </p>
 
-                <div
-                    style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.5);">
-                    <h3
-                        style="color: var(--color-copper); font-family: var(--font-heading); margin-bottom: var(--space-m);">
-                        DIESE SEITE BEFINDET SICH IM AUFBAU</h3>
-                    <p style="color: var(--color-white);">
-                        Hier entstehen in Kürze detaillierte Informationen zu unserem Prototypenbau.
-                        <br><br>
-                        Haben Sie Fragen? <a href="kontakt.html"
-                            style="color: var(--color-copper); text-decoration: underline;">Kontaktieren Sie uns
-                            direkt.</a>
-                    </p>
+                <div class="grid"
+                    style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: var(--space-l); margin-bottom: var(--space-xl);">
+                    <!-- Card 1 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            3D-FORENSIK & REVERSE ENGINEERING
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            Wir raten nicht, wir messen. Scan des Bauraums. Rekonstruktion der perfekten A-Fläche. Der
+                            digitale Zwilling als Basis für das perfekte Realteil.
+                        </p>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            LOW-VOLUME TOOLING
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            Werkzeuge für Kleinserien. Materialschonend, kosteneffizient, präzise. Für Stückzahl 1 bis
+                            100. <span style="color: var(--color-copper);">Werkzeuge über Nacht.</span>
+                        </p>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div
+                        style="border: 1px solid var(--color-steel); padding: var(--space-l); background: rgba(11,11,11,0.8);">
+                        <h3
+                            style="color: var(--color-white); font-family: var(--font-heading); margin-bottom: var(--space-s);">
+                            KALTVERFESTIGUNG
+                        </h3>
+                        <p style="color: var(--color-steel); line-height: 1.6;">
+                            Unser "Secret Sauce". Durch gezielte Umformung erreichen wir eine Beulsteifigkeit, die das
+                            Original oft übertrifft. Plug & Play für Ihre Montage.
+                        </p>
+                    </div>
+                </div>
+
+                <div style="text-align: center; margin-top: var(--space-xxl);">
+                    <h2
+                        style="font-family: var(--font-heading); color: var(--color-white); margin-bottom: var(--space-m);">
+                        VOM DATENSATZ ZUM BLECH.
+                    </h2>
+                    <a href="kontakt.html" class="cta-button cta-button--copper">PROJEKT ANFRAGEN</a>
                 </div>
             </div>
         </section>
@@ -77,8 +116,8 @@
                     <p>+49 172 8807046<br>kontakt@skarosserie.de</p>
                 </div>
                 <div class="contact-block">
-                    <h4>LEGAL</h4>
-                    <p><a href="#">Impressum</a><br><a href="#">Datenschutz</a></p>
+                    <h4>RECHTLICHES</h4>
+                    <p><a href="impressum.html">Impressum</a><br><a href="datenschutz.html">Datenschutz</a></p>
                 </div>
             </div>
         </div>
