--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                     <p>+49 172 8807046<br>kontakt@skarosserie.de</p>
                 </div>
                 <div class="contact-block">
-                    <h4>LEGAL</h4>
-                    <p><a href="#">Impressum</a><br><a href="#">Datenschutz</a></p>
+                    <h4>RECHTLICHES</h4>
+                    <p><a href="impressum.html">Impressum</a><br><a href="datenschutz.html">Datenschutz</a></p>
                 </div>
             </div>
         </div>
