--- a/kontakt.html
+++ b/kontakt.html
@@ -85,9 +85,28 @@
     <!-- Footer -->
     <footer id="kontakt" class="footer">
         <div class="container footer__container">
-            <div class="footer__bottom">
-                <p>&copy; 2026 SKAROSSERIE. ALL RIGHTS RESERVED.</p>
+            <div class="footer__left">
+                <h2 class="footer__slogan">PRÄZISION IST KEIN ZUFALL.</h2>
+                <a href="kontakt.html" class="cta-button cta-button--copper">PROJEKT ANFRAGEN</a>
             </div>
+            <div class="footer__right">
+                <div class="contact-block">
+                    <h4>LINKS</h4>
+                    <p><a href="index.html">Startseite</a><br><a href="leistungen.html">Leistungen</a><br><a
+                            href="philosophie.html">Philosophie</a><br><a href="faq.html">FAQ</a></p>
+                </div>
+                <div class="contact-block">
+                    <h4>KONTAKT</h4>
+                    <p>+49 172 8807046<br>kontakt@skarosserie.de</p>
+                </div>
+                <div class="contact-block">
+                    <h4>RECHTLICHES</h4>
+                    <p><a href="impressum.html">Impressum</a><br><a href="datenschutz.html">Datenschutz</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <p>&copy; 2026 SKAROSSERIE. ALL RIGHTS RESERVED.</p>
         </div>
     </footer>
 </body>
