--- a/philosophie.html
+++ b/philosophie.html
@@ -121,6 +121,10 @@
                     <h4>KONTAKT</h4>
                     <p>+49 172 8807046<br>kontakt@skarosserie.de</p>
                 </div>
+                <div class="contact-block">
+                    <h4>RECHTLICHES</h4>
+                    <p><a href="impressum.html">Impressum</a><br><a href="datenschutz.html">Datenschutz</a></p>
+                </div>
             </div>
         </div>
         <div class="footer__bottom">
