Update content: Remove inaccurate 'Werkzeuge über Nacht' claim

--- a/prototypen-teile.html
+++ b/prototypen-teile.html
@@ -70,7 +70,7 @@
                         </h3>
                         <p style="color: var(--color-steel); line-height: 1.6;">
                             Werkzeuge für Kleinserien. Materialschonend, kosteneffizient, präzise. Für Stückzahl 1 bis
-                            100. <span style="color: var(--color-copper);">Werkzeuge über Nacht.</span>
+                            100. <span style="color: var(--color-copper);">Maximale Effizienz.</span>
                         </p>
                     </div>
 
